Fix misaligned text in schedule.

--- a/style.css
+++ b/style.css
@@ -244,7 +244,7 @@ div {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    width: 80%;
+    width: 70%;
 }
 
 .main-database-entry-amount {
